--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,7 @@ spring.config.import=optional:configserver:http://localhost:8888
 spring.profiles.active=dev
 spring.cloud.config.profile=dev
 
+spring.cloud.config.name=microservice-y
+
 limits-service.minimum=3
 limits-service.maximum=997
